[package]
name = "pulse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
tokio = {version = "1.49.0", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.20.0", features = ["serde", "v4"]}
futures = "0.3.31"
