[package]
name = "pulse-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["ws"]}
tokio = {version = "1.49.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
reqwest = { version = "0.13", features = ["json"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
dotenv = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = {version = "1.20.0", features = ["serde", "v4"]}
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.10.0"
chrono = "0.4.43"
